--- a/settings.ini
+++ b/settings.ini
@@ -4,7 +4,8 @@ CONFIG_FILE="X86_64.config"
 DIY_SH="diy.sh"
 FREE_UP_DISK="true"
 SSH_ACTIONS="false"
-UPLOAD_BIN_DIR_FOR_ARTIFACT="false"
+UPLOAD_FIRMWARE="true"
+UPLOAD_BIN_DIR_FOR_ARTIFACT="true"
 UPLOAD_FIRMWARE_FOR_ARTIFACT="true"
 UPLOAD_FIRMWARE_FOR_RELEASE="true"
 UPLOAD_FIRMWARE_TO_COWTRANSFER="true"
