--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
   
-    - name: Load Settings.ini
+    - name: 加载Settings.ini
       run: |
         source "${GITHUB_WORKSPACE}/settings.ini"
         echo "::set-env name=REPO_URL::${REPO_URL}"
@@ -48,7 +48,7 @@ jobs:
         echo "::set-env name=UPLOAD_FIRMWARE_TO_COWTRANSFER::${UPLOAD_FIRMWARE_TO_COWTRANSFER}"
         echo "::set-env name=UPLOAD_FIRMWARE_TO_WETRANSFER::${UPLOAD_FIRMWARE_TO_WETRANSFER}"
 
-    - name: Initialization environment
+    - name: 初始化编译environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -60,14 +60,14 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         curl -fsSL https://raw.githubusercontent.com/P3TERX/dotfiles/master/.bashrc >> ~/.bashrc
     
-    - name: Get current date
+    - name: 获取当前date
       id: date
       run: |
         echo "::set-env name=date::$(date +'%m/%d_%Y_%H/%M')"
         echo "::set-env name=date2::$(date +'%m/%d %Y')"
         echo "::set-env name=date3::$(date +'%m.%d')"
 
-    - name: Clone source code
+    - name: 克隆源码
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         mv feeds.conf openwrt/
@@ -85,10 +85,10 @@ jobs:
         #ln -s /mnt/openwrt/dl openwrt/
         #ln -s /mnt/openwrt/staging_dir openwrt/
 
-    - name: Update feeds
+    - name: 更新feeds
       run: cd openwrt && ./scripts/feeds update -a
 
-    - name: Load custom configuration
+    - name: 加载自定义configuration
       run: |
         cp -Rf * openwrt/ || true
         cd openwrt
@@ -102,7 +102,7 @@ jobs:
         [ $(grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/') == generic ] && DEVICE_NAME=$(grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/CONFIG_TARGET_(.*)_DEVICE_.*=y/\1/') || DEVICE_NAME=$(grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/')
         echo "::set-env name=DEVICE_NAME::$DEVICE_NAME"
         
-    - name: Default PPPOE Setting
+    - name: 默认PPPOE设置
       if: env.PPPOE_USERNAME && env.PPPOE_PASSWD
       run: |
         sed -i '$i uci set network.wan.username=${{ env.PPPOE_USERNAME }}' openwrt/package/*/*/default-settings/files/zzz-default-settings
@@ -113,7 +113,7 @@ jobs:
       uses: garypang13/debugger-action@master
       if: env.SSH_ACTIONS == 'true'
 
-    - name: Download package
+    - name: 下载相关package
       id: package
       run: |
         cd openwrt
@@ -121,14 +121,14 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: Compile the firmware
+    - name: 开始编译固件
       run: |
         cd openwrt
         echo -e "$(($(nproc)+1)) thread compile"
         make -j$(($(nproc)+1)) || make -j1 V=s
         echo "::set-env name=status::success"
       
-    - name: Upload bin directory
+    - name: 上传bin目录
       uses: actions/upload-artifact@master
       if: env.UPLOAD_BIN_DIR_FOR_ARTIFACT == 'true'
       with:
@@ -184,47 +184,6 @@ jobs:
         rand=$[$RANDOM % ${#Emoji[@]}]
         echo "::set-env name=EMOJI::${Emoji[$rand]}"
  
-    - name: Upload firmware to cowtransfer
-      if: env.UPLOAD_FIRMWARE_TO_COWTRANSFER == 'true'
-      continue-on-error: true
-      run: |
-        curl -fsSL git.io/file-transfer | sh
-        cowurl=$(./transfer cow --block 2621440 -s --no-progress ${FIRMWARE})
-        cowurl=$(echo $cowurl | grep -o -E "https[^ ]*")
-        echo "::set-env name=COWURL::$cowurl"
-        echo "Download Link: ${{ env.EMOJI }} $cowurl ${{ env.EMOJI }} 🚀"
- 
-    - name: Upload firmware to WeTransfer
-      if: env.UPLOAD_FIRMWARE_TO_WETRANSFER == 'true'
-      continue-on-error: true
-      run: |
-        curl -fsSL git.io/file-transfer | sh
-        wetrans=$(./transfer wet -s -p 16 --no-progress ${FIRMWARE})
-        wetrans=$(echo $wetrans | grep -o -E "https[^ ]*")
-        echo "::set-env name=WETRANS::$wetrans"
-        echo "Download Link: ${{ env.EMOJI }} $wetrans ${{ env.EMOJI }} 🚀"
-
-    - name: Create release
-      id: create_release
-      uses: actions/create-release@master
-      continue-on-error: true
-      if: env.REPO_TOKEN && env.UPLOAD_FIRMWARE_FOR_RELEASE == 'true'
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
-      with:
-        tag_name: ${{ env.date }}_${{ env.DEVICE_NAME }}
-        release_name: ${{ env.date2 }} ${{ env.DEVICE_NAME }} ${{ env.EMOJI }}
-        body: |
-            墙内加速下载🔥:
-            
-            奶牛快传: ${{ env.COWURL }} 🚀
-            
-            WeTransfer: ${{ env.WETRANS }} 🗽
-            
-            请分配不低于1G 的内存和存储空间 💾
-        draft: false
-        prerelease: false     
-
     - name: Upload firmware for release
       uses: csexton/release-asset-action@master
       continue-on-error: true
